Move tests for grafter-1 into their own alias so they can be excluded
To exclude these tests e.g. if testing on a java version greater than
12 then you can do so with:

$ lein with-profile -grafter-1-tests test